--- a/package.json
+++ b/package.json
@@ -6,16 +6,26 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongodb": "^3.6.2",
     "morgan": "^1.10.0",
-    "socket.io": "^2.3.0"
+    "mongoose": "^5.10.7",
+    "socket.io": "^2.3.0",
+    "regenerator-runtime": "^0.13.7"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "production": "NODE_ENV='production node app.js"
+    "start": "node app.js",
+    "production": "NODE_ENV='production' node app.js"
   },
-  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/WissamSawah/chat-server.git"
+  },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/WissamSawah/chat-server/issues"
+  },
+  "homepage": "https://github.com/WissamSawah/chat-server#readme"
 }
