--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.6.2",
-    "morgan": "^1.10.0",
     "mongoose": "^5.10.7",
-    "socket.io": "^2.3.0",
-    "regenerator-runtime": "^0.13.7"
+    "morgan": "^1.10.0",
+    "regenerator-runtime": "^0.13.7",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {},
   "scripts": {
